--- a/src/app/liked-events/liked-events.component.html
+++ b/src/app/liked-events/liked-events.component.html
@@ -1,3 +1,5 @@
+<!--Tykätyt tapahtumat-komponentti. Näyttää saman kuin notifications, mutta vain käyttäjän tykätyt tapahtumat näkyvät.-->
+
 <StackLayout class="body">
   <Image class="logo" src="~/icons/valk_logo.png"></Image>
   <Label class="ilmoitukset" text="Liked events"></Label>
