--- a/src/app/login-forms/login-forms.component.html
+++ b/src/app/login-forms/login-forms.component.html
@@ -42,6 +42,7 @@
       <Label
         class="registered_down"
         text="Register"
+        [ngClass]="{ pressed: isPressed }"
         (tap)="routeRegister()"
       ></Label>
     </StackLayout>
