--- a/src/app/register-forms/register-forms.component.css
+++ b/src/app/register-forms/register-forms.component.css
@@ -109,5 +109,13 @@
 }
 
 .scroll {
-  height: 150%;
+  height: 170%;
+}
+
+.pressed {
+  color: white;
+}
+
+.privacyblack {
+  background-color: black;
 }
