--- a/src/app/loading-page/loading-page.component.html
+++ b/src/app/loading-page/loading-page.component.html
@@ -1,3 +1,5 @@
+<!--Lataus-sivu. Heiluva logo.-->
+
 <StackLayout class="body">
   <Image src="~/icons/valk_logo.png" class="logo logo heilahtava-kuva"></Image>
   <ActivityIndicator
