--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,10 +1,14 @@
-<ModalStack dismissEnabled="true" class="modal-container">
-  <StackLayout class="modal">
-    <Label
-      *ngIf="context && context.text"
-      text="{{ context.text }}"
-      class="text-center"
-      textWrap="true"
-    ></Label>
-  </StackLayout>
-</ModalStack>
+<!--Modal-sivu-->
+<StackLayout class="body">
+  <Image src="~/icons/valk_logo.png" class="logo"></Image>
+  <ModalStack dismissEnabled="true" class="modal-container">
+    <StackLayout class="modal">
+      <Label
+        *ngIf="context && context.text"
+        text="{{ context.text }}"
+        class="text-center"
+        textWrap="true"
+      ></Label>
+    </StackLayout>
+  </ModalStack>
+</StackLayout>
