--- a/src/app/personel/personel.component.html
+++ b/src/app/personel/personel.component.html
@@ -1,18 +1,14 @@
 <!-- Tällä komponentilla tehdään suodatus. Neljä ikonia, joita painamalla, voidaan valita,
 minkä genren tapahtumia näytetään. -->
 <StackLayout class="body">
-  <FlexboxLayout
-    flexDirection="row"
-    justifyContent="space-between"
-    alignItems="center"
+  <Button
+    horizontalAlignment="right"
+    (tap)="routeSettings()"
+    class="menuButton"
   >
-    <Image class="logo" src="~/icons/valk_logo.png"></Image>
-    <Image
-      (tap)="routeSettings()"
-      class="menu"
-      src="~/icons/asetuksetVarillinen-icon.png"
-    ></Image
-  ></FlexboxLayout>
+  </Button>
+  <Image class="logo" src="~/icons/valk_logo.png"></Image>
+
   <label class="text" text="Find events"></label>
   <Label class="text2" text="Filter the events by category"></Label>
   <StackLayout class="icongrid">
